--- a/may2022/calculator.html
+++ b/may2022/calculator.html
@@ -26,7 +26,7 @@
     </table>
 
     <script>
-        function calsioperation(action ='add'){
+        function calsioperation(action){
             var num1 = parseInt(document.getElementById('number1').value);
             var num2 = parseInt(document.getElementById('number2').value);
 
@@ -39,7 +39,7 @@
             } else if(action === 'mul'){
                 let num3 = num1 * num2;
                 document.getElementById('result').innerHTML = num3;
-            } else if (num2 == 0 && action === 'div') {
+            } else if (num2 === 0 && action === 'div') {
                 document.getElementById('result').innerHTML = "Num2 should be greater then 0";
             } else {
                 let num3 = num1 / num2;
