--- a/may2022/prime-number.html
+++ b/may2022/prime-number.html
@@ -7,6 +7,57 @@
     <title>Prime Number</title>
 </head>
 <body>
-    
+    <table align="center" width="600" border="1" cellpadding="10px" cellspacing="10px">
+        <tr>
+            <td id="primenumber"></td>
+        </tr>
+    </table>
+
+    <script>
+        // 1,3, 5, 7, 11, 13, ...
+
+        // const primenumber = () => {
+        //     let i=1;
+        //     while(i > 0 && i < 100){
+        //         if(i%1==1){
+        //             document.getElementById('primenumber').innerHTML = "Prime Number are:" + i;
+        //         }
+        //         i++;
+        //     }
+        // }; primenumber();
+        
+        let i=1;
+        while(i > 0 && i < 100){
+            if(i/1==0 && i%i==1){
+                document.getElementById('primenumber').innerHTML = "Prime Number are:" + i;
+            }
+            i++;
+        }
+
+    </script>
+
+    <script>
+        // var a = prompt("Type number here.", "");
+        // var i = 2;
+        // var b;
+        // var c = true;
+        // while (i < a) {
+        //     b = a % i;
+        //     if (b == 0) {
+        //         c = false;
+        //         break;
+        //     }
+        //     i++;
+        // }
+
+        // if (c) {
+        //     alert("Your number is a prime number");
+        // }
+        // else {
+        //     alert("Your number is not a prime number");
+        // }
+    </script>
+
+
 </body>
 </html>
