--- a/may2022/prime-number.html
+++ b/may2022/prime-number.html
@@ -9,55 +9,79 @@
 <body>
     <table align="center" width="600" border="1" cellpadding="10px" cellspacing="10px">
         <tr>
-            <td id="primenumber"></td>
+            <td align="center" id="primenumber1"></td>
+        </tr>
+        <tr>
+            <td align="center" id="primenumber2"></td>
+        </tr>
+        <tr>
+            <td align="center" id="primenumber3"></td>
         </tr>
     </table>
 
     <script>
-        // 1,3, 5, 7, 11, 13, ...
+        let isPrime = true;
 
-        // const primenumber = () => {
-        //     let i=1;
-        //     while(i > 0 && i < 100){
-        //         if(i%1==1){
-        //             document.getElementById('primenumber').innerHTML = "Prime Number are:" + i;
-        //         }
-        //         i++;
-        //     }
-        // }; primenumber();
-        
-        let i=1;
-        while(i > 0 && i < 100){
-            if(i/1==0 && i%i==1){
-                document.getElementById('primenumber').innerHTML = "Prime Number are:" + i;
+        // Program 1
+        const checkPrime = (num1) => {
+            if(num1 === 0){
+                document.getElementById('primenumber1').innerHTML = "0 is not a prime number";
+            } else if(num1 === 1){
+                document.getElementById('primenumber1').innerHTML = "1 is not a composite nor prime number"
+            } else if(num1 >= 2){
+                for (let i = 2; i < num1/2; i++) {
+                    if(num1 % i == 0){
+                        isPrime = false;
+                        break;
+                    }
+                }
+                if(isPrime){
+                    document.getElementById('primenumber1').innerHTML = `${num1}` + " is a prime number"
+                } else{
+                    document.getElementById('primenumber1').innerHTML = `${num1}` + " not a prime number"
+                }
             }
-            i++;
+        };checkPrime(11);
+
+        // Program 2
+        let num2 = parseInt(prompt('Enter your number'));
+        if (num2 === 0) {
+            document.getElementById('primenumber2').innerHTML = "0 is not a prime number";
+        } else if (num2 === 1) {
+            document.getElementById('primenumber2').innerHTML = "1 is not a composite nor prime number"
+        } else if (num2 >= 2) {
+            for (let i = 2; i < num2 / 2; i++) {
+                if (num2 % i == 0) {
+                    isPrime = false;
+                    break;
+                }
+            }
+            if (isPrime) {
+                document.getElementById('primenumber2').innerHTML = `${num2}` + " is a prime number"
+            } else {
+                document.getElementById('primenumber2').innerHTML = `${num2}` + " not a prime number"
+            }
+        }
+
+        // Program 3 (Find prime number in between 1 to 100)
+        const lowerNumber = parseInt(prompt('Enter lower number: '));
+        const higherNumber = parseInt(prompt('Enter higher number: '));
+        console.log(`The prime numbers between ${lowerNumber} and ${higherNumber} are:`);
+
+        for (let i = lowerNumber; i <= higherNumber; i++) {
+            let isprime1 = false;
+            for (let j = 2; j < i; j++) {
+                if (i % j == 0) {
+                    isprime1 = true;
+                    break;
+                }
+            }
+            if (i > 1 && isprime1 == false) {
+                console.log(i);
+            }
         }
 
     </script>
-
-    <script>
-        // var a = prompt("Type number here.", "");
-        // var i = 2;
-        // var b;
-        // var c = true;
-        // while (i < a) {
-        //     b = a % i;
-        //     if (b == 0) {
-        //         c = false;
-        //         break;
-        //     }
-        //     i++;
-        // }
-
-        // if (c) {
-        //     alert("Your number is a prime number");
-        // }
-        // else {
-        //     alert("Your number is not a prime number");
-        // }
-    </script>
-
 
 </body>
 </html>
